# swagger.yaml
@@ -29,10 +29,10 @@ tags:
     description: teacher/coaching demo class related endpoint 
   - name: Enrollment
     description: Student Enrollment related endpoint 
-  - name: Review
-    description: student review about batch or class 
-  - name: Schedule
-    description: class Schedule related endpoint 
+  # - name: Review    TODO:
+  #   description: student review about batch or class 
+  # - name: Schedule
+  #   description: class Schedule related endpoint 
   - name: Notification
     description: class related notification endpoint 
   - name: Auth
@@ -2435,308 +2435,7 @@ paths:
           $ref: '#/components/responses/401'
         '500':
           $ref: '#/components/responses/500'
-  '/schedule':
-    post:
-      security:
-        - bearerAuth: []  
-      tags: [Schedule]
-      description: create a Schedule 
-      requestBody: 
-        description: provide a valid time for Schedule 
-        content: 
-          'application/json':
-            schema: 
-              type: object
-              properties:
-                startTime:
-                  type: string
-                  format: date-time
-                  example: 2026-02-06T14:33:29.231Z
-                endTime:
-                  type: string
-                  format: date-time
-                  example: 2026-02-06T14:39:39.231Z
-              required: [ startTime, endTime ]           
-      responses: 
-        '200':
-          description: successfully created teacher profile 
-          content: 
-            'application/json':
-              schema: 
-                type: object
-                properties: 
-                  code: 
-                    type: number
-                    format: int32
-                    example: 200
-                  message:
-                    type: string
-                    example: success
-                  Schedule:
-                    type: object
-                    properties: 
-                      startTime:
-                        type: string
-                        format: date-time
-                        example: 2026-02-06T14:33:29.231Z
-                      endTime:
-                        type: string
-                        format: date-time
-                        example: 2026-02-06T14:39:39.231Z
-                  link:
-                    type: string
-                    format: url
-                    example: /batch/12
-        '400':
-          $ref: '#/components/responses/400'
-        '401':
-          $ref: '#/components/responses/401'
-        '500':
-          $ref: '#/components/responses/500'
-  '/schedules/{id}':
-    get:
-      security:
-      - bearerAuth: []
-      tags: [Schedule]
-      description: Find a Schedule
-      parameters: 
-        - $ref: '#/components/parameters/idPathParams'
-      
-      responses: 
-        '200':
-          description: success
-          content: 
-            'application/json':
-              schema:
-                type: object
-                properties: 
-                  code:
-                    type: number
-                    format: int32
-                    example: 200
-                  message:
-                    type: string
-                    example: success
-                  Schedule:
-                    type: object
-                    properties:
-                      startTime:
-                        type: string
-                        format: date-time
-                        example: 2026-02-06T14:33:29.231Z
-                      endTime:
-                        type: string
-                        format: date-time
-                        example: 2026-02-06T14:39:39.231Z
-        '400':
-          $ref: '#/components/responses/400'
-        '401':
-          $ref: '#/components/responses/401'
-        '404':
-          $ref: '#/components/responses/404'
-        '500':
-          $ref: '#/components/responses/500'
-    put:
-      security:
-        - bearerAuth: []
-      tags: [DemoClass]
-      description: Update or Create a Demo Class
-      parameters: 
-        - $ref: '#/components/parameters/idPathParams'
-      requestBody: 
-        description: provide a valid info 
-        content: 
-          'application/json':
-            schema:
-              type: object
-              properties: 
-                startTime:
-                  type: string
-                  format: date-time
-                  example: 2026-02-06T14:33:29.231Z
-                endTime:
-                  type: string
-                  format: date-time
-                  example: 2026-02-06T14:39:39.231Z
-              required: [ startTime, endTime ]         
-      responses: 
-        '200':
-          description: successfully updated
-          content: 
-            'application/json':
-              schema: 
-                type: object
-                properties: 
-                  code:
-                    type: number
-                    format: int32
-                    example: 200
-                  message:
-                    type: string
-                    example: successfully updated or create 
-                  schedule:
-                    type: object
-                    properties: 
-                      startTime:
-                        type: string
-                        format: date-time
-                        example: 2026-02-06T14:33:29.231Z
-                      endTime:
-                        type: string
-                        format: date-time
-                        example: 2026-02-06T14:39:39.231Z
-                    required: [ startTime, endTime ]         
-        '400':
-          $ref: '#/components/responses/400'
-        '401':
-          $ref: '#/components/responses/401'
-        '500':
-          $ref: '#/components/responses/500'
-    patch:
-      security: 
-        - bearerAuth: []
-      tags: [Schedule]
-      description: Update a Schedule
-      parameters: 
-        - $ref: '#/components/parameters/idPathParams'
-      requestBody: 
-        description: provide content which one want to update 
-        content: 
-          'application/json':
-            schema: 
-              type: object
-              properties: 
-                startTime:
-                  type: string
-                  format: date-time
-                  example: 2026-02-06T14:33:29.231Z
-                endTime:
-                  type: string
-                  format: date-time
-                  example: 2026-02-06T14:39:39.231Z
-                
-      responses: 
-        '200':
-          description: success
-          content:
-            'application/json':
-              schema:
-                type: object
-                properties: 
-                  code: 
-                    type: number
-                    format: int32
-                    example: 200
-                  message:
-                    type: string
-                    example: success
-                  DemoClass:
-                    type: object
-                    properties: 
-                      startTime:
-                        type: string
-                        format: date-time
-                        example: 2026-02-06T14:33:29.231Z
-                      endTime:
-                        type: string
-                        format: date-time
-                        example: 2026-02-06T14:39:39.231Z  
-        '400':
-          $ref: '#/components/responses/400'
-        '401':
-          $ref: '#/components/responses/401'
-        '404':
-          $ref: '#/components/responses/404'
-        '500':
-          $ref: '#/components/responses/500'
-    delete: 
-      security:
-        - bearerAuth: []
-      tags: [Schedule]
-      description: Delete a Schedule
-      parameters: 
-        - $ref: '#/components/parameters/idPathParams'
-      
-      responses: 
-        '204':
-          description: success 
-          content: 
-            'application/json':
-              schema: 
-                type: object
-                properties: 
-                  startTime:
-                    type: string
-                    format: date-time
-                    example: 2026-02-06T14:33:29.231Z
-                  endTime:
-                    type: string
-                    format: date-time
-                    example: 2026-02-06T14:39:39.231Z
-        '400':
-          $ref: '#/components/responses/400'
-        '401':
-          $ref: '#/components/responses/401'
-        '404':
-          $ref: '#/components/responses/404'
-        '500':
-          $ref: '#/components/responses/500'  
-  '/schedules?query=params':
-    get:
-      security: 
-        - bearerAuth: []
-      description: List of all Schedules 
-      tags: [Schedule]
-      parameters: 
-        - $ref: '#/components/parameters/pageParams'
-        - $ref: '#/components/parameters/limitParams'
-        - $ref: '#/components/parameters/sortTypeParams'
-        - $ref: '#/components/parameters/sortByParams'
-        - $ref: '#/components/parameters/searchParams'
-        
-      responses: 
-        '200':
-          description: All Schedules List
-          content: 
-            'application/json':
-              schema: 
-                type: object
-                properties: 
-                  code: 
-                    type: number
-                    format: int32
-                    example: 200
-                  message:
-                    type: string
-                    example: success
-                  Enrolled:
-                    type: array
-                    items: 
-                      allOf: 
-                        - type: object
-                          properties:
-                            startTime:
-                              type: string
-                              format: date-time
-                              example: 2026-02-06T14:33:29.231Z
-                            endTime:
-                              type: string
-                              format: date-time
-                              example: 2026-02-06T14:39:39.231Z
-                            link:
-                              type: string
-                              format: url
-                              example: /schedules/12
-                  pagination:
-                    $ref: '#/components/schemas/pagination'
-                  links:
-                    $ref: '#/components/schemas/links'
-        '400':
-          $ref: '#/components/responses/400'
-        '401':
-          $ref: '#/components/responses/401'
-        '500':
-          $ref: '#/components/responses/500'
+
   '/notification':
     post:
       security:
